--- a/InstaPrj/src/main/resources/templates/feeds/modify.html
+++ b/InstaPrj/src/main/resources/templates/feeds/modify.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="ko" xmlns:th="http://www.thymeleaf.org">
-<th:block th:replace="~{/layout/basic :: setContent(~{this::content})}">
+<th:block th:replace="~{/feeds/list :: setContent(~{this::content})}">
   <th:block th:fragment="content">
     <h1 class="mt-4">Movie Modify Page</h1>
     <style>
@@ -13,32 +13,28 @@
       .uploadResult ul li {list-style:none;padding:10px;margin-left:2em;}
       .uploadResult ul li img {width: 100px;}
     </style>
-    <form th:action="@{/movie/modify}" th:method="post" id="frmSend">
+    <form th:action="@{/feeds/modify}" th:method="post" id="frmSend">
       <div class="form-group">
         <label>Mno</label>
-        <input type="text" th:value="${movieDTO.mno}" name="mno" class="form-control" readonly>
+        <input type="text" th:value="${feedsDTO.fno}" name="fno" class="form-control" readonly>
       </div>
       <div class="form-group">
         <label>Title</label>
-        <input type="text" name="title" th:value="${movieDTO.title}" class="form-control">
+        <input type="text" name="title" th:value="${feedsDTO.title}" class="form-control">
       </div>
       <div style="margin-bottom: 30px;">
         <label>Review Count</label>
-        <input type="text" name="reviewCnt" class="form-control" readonly th:value="${movieDTO.reviewCnt}">
-      </div>
-      <div style="margin-bottom: 30px;">
-        <label>Average</label>
-        <input type="text" name="avg" readonly class="form-control" th:value="${movieDTO.avg}">
+        <input type="text" name="reviewsCnt" class="form-control" readonly th:value="${feedsDTO.reviewsCnt}">
       </div>
       <div class="form-group">
         <label>RegDate</label>
         <input type="text" class="form-control"
-               th:value="${#temporals.format(movieDTO.regDate, 'yyyy/MM/dd HH:mm:ss')}" readonly>
+               th:value="${#temporals.format(feedsDTO.regDate, 'yyyy/MM/dd HH:mm:ss')}" readonly>
       </div>
       <div class="form-group">
         <label>ModDate</label>
         <input type="text" class="form-control"
-               th:value="${#temporals.format(movieDTO.modDate, 'yyyy/MM/dd HH:mm:ss')}" readonly>
+               th:value="${#temporals.format(feedsDTO.modDate, 'yyyy/MM/dd HH:mm:ss')}" readonly>
       </div>
       <div class="form-group">
         <label for="fileInput">Select Image Files</label>
@@ -58,19 +54,19 @@
     </form>
     <div class="uploadResult">
       <ul>
-        <li th:each="movieImageDTO : ${movieDTO.imageDTOList}"
-            th:data-path='${movieImageDTO.path}'
-            th:data-uuid='${movieImageDTO.uuid}'
-            th:data-file='${movieImageDTO.getImageURL}'
-            th:data-name='${movieImageDTO.imgName}'
+        <li th:each="PhotosDTO : ${feedsDTO.imageDTOList}"
+            th:data-path='${PhotosDTO.path}'
+            th:data-uuid='${PhotosDTO.uuid}'
+            th:data-file='${PhotosDTO.getImageURL}'
+            th:data-name='${PhotosDTO.imgName}'
             style="cursor:pointer;">
           <div>
             <button type="button"
                     th:onclick="deleteFileDb(this)">X
             </button>
             <img
-                th:if="${movieImageDTO.path != null}"
-                th:src="|@{/display(fileName=${movieImageDTO.getThumbnailURL})}|">
+                th:if="${PhotosDTO.path != null}"
+                th:src="|@{/display(fileName=${PhotosDTO.getThumbnailURL})}|">
           </div>
         </li>
       </ul>
@@ -190,7 +186,7 @@
       }
       btnDele.onclick = e => {
         e.preventDefault()
-        frmSend.setAttribute('action', /*[[@{/movie/remove}]]*/'remove')
+        frmSend.setAttribute('action', /*[[@{/feeds/remove}]]*/'remove')
         frmSend.submit();
       }
       btnBack.onclick = e => {
