--- a/InstaPrj/src/main/resources/templates/feeds/read.html
+++ b/InstaPrj/src/main/resources/templates/feeds/read.html
@@ -16,72 +16,68 @@
   .star span {width: 0;position: absolute; left: 0;color: red;
     overflow: hidden;pointer-events: none;}
 </style>
-<th:block th:replace="~{/layout/basic :: setContent(~{this::content})}">
+<!--<th:block th:replace="~{/feeds/list :: setContent(~{this::content})}">
   <th:block th:fragment="content">
-    <h1 class="mt-4">Movie Read Page</h1>
-    <form th:action="@{/movie/modify}" th:method="post" id="frmSend">
+    <h1 class="mt-4">Content View</h1>
+    <form th:action="@{/feeds/modify}" th:method="post" id="frmSend">
       <div class="form-group">
-        <label for="mno">Mno</label>
-        <input type="text" name="mno" id="mno" class="form-control"
-               th:value="${movieDTO.mno}" readonly>
+        <label for="fno">FNO</label>
+        <input type="text" name="fno" id="fno" class="form-control"
+               th:value="${feedsDTO.fno}" readonly>
       </div>
       <div class="form-group">
         <label for="title">Title</label>
         <input type="text" name="title" id="title" class="form-control"
-               th:value="${movieDTO.title}" readonly>
+               th:value="${feedsDTO.title}" readonly>
       </div>
       <div class="form-group">
-        <label for="reviewCnt">Review Count</label>
-        <input type="text" name="reviewCnt" id="reviewCnt" class="form-control"
-               th:value="${movieDTO.reviewCnt}" readonly></input>
-      </div>
-      <div class="form-group">
-        <label for="avg">Average</label>
-        <input type="text" name="avg" id="avg" class="form-control"
-               th:value="${movieDTO.avg}" readonly></input>
+        <label for="reviewsCnt">Review Count</label>
+        <input type="text" name="reviewsCnt" id="reviewsCnt" class="form-control"
+               th:value="${feedsDTO.reviewsCnt}" readonly></input>
       </div>
       <div class="form-group">
         <label for="regDate">RegDate</label>
         <input type="text" name="regDate" id="regDate" class="form-control" readonly
-               th:value="${#temporals.format(movieDTO.regDate, 'yyyy/MM/dd hh:mm')}">
+               th:value="${#temporals.format(feedsDTO.regDate, 'yyyy/MM/dd hh:mm')}">
       </div>
       <div class="form-group">
         <label for="modDate">ModDate</label>
         <input type="text" name="modDate" id="modDate" class="form-control" readonly
-               th:value="${#temporals.format(movieDTO.modDate, 'yyyy/MM/dd hh:mm')}">
+               th:value="${#temporals.format(feedsDTO.modDate, 'yyyy/MM/dd hh:mm')}">
       </div>
       <div class="uploadResult">
         <ul>
-          <li th:each="movieImageDTO : ${movieDTO.imageDTOList}"
-              th:data-file="${movieImageDTO.getThumbnailURL}" style="cursor:pointer;">
+          <li th:each="photosDTO : ${feedsDTO.photosDTOList}"
+              th:data-file="${photosDTO.getThumbnailURL}" style="cursor:pointer;">
             <img
-                th:if="${movieImageDTO.path != null}"
-                th:src="|@{/display(fileName=${movieImageDTO.getThumbnailURL})}|">
+                th:if="${photosDTO.path != null}"
+                th:src="|@{/display(fileName=${photosDTO.getThumbnailURL})}|">
           </li>
         </ul>
       </div>
       <div class="form-group">
-        <a th:href="@{/movie/modify(mno=${movieDTO.mno},
+        <a th:href="@{/feeds/modify(fno=${feedsDTO.fno},
                       page=${pageRequestDTO.page},type=${pageRequestDTO.type},
                       keyword=${pageRequestDTO.keyword})}"
            class="btn btn-primary">Modify</a>
-        <a th:href="@{/movie/list(page=${pageRequestDTO.page},
+        <a th:href="@{/feeds/list(page=${pageRequestDTO.page},
                       type=${pageRequestDTO.type},keyword=${pageRequestDTO.keyword})}"
            class="btn btn-info">List</a>
       </div>
-    </form>
-    <div>
+    </form>-->
+    <!--리뷰 등록 관련-->
+  <!--  <div>
       <div class="mt-4">
         <h5>
           <span class="btn btn-outline-secondary addReview">Add Review</span>
           <span style="font-size:9pt">Review :
-            <span id="revCnt" th:text="${movieDTO.reviewCnt}"></span> 개
+            <span id="revCnt" th:text="${feedsDTO.reviewsCnt}"></span> 개
           </span>
         </h5>
       </div>
-      <div class="list-group reviewList" style="margin-bottom:50px;"></div>
-    </div>
-    <div class="modal fade" id="myModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="list-group reviewsList" style="margin-bottom:50px;"></div>
+    </div>-->
+    <!--<div class="modal fade" id="myModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
       <div class="modal-dialog">
         <div class="modal-content">
           <div class="modal-header">
@@ -92,12 +88,12 @@
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-            <!-- <button type="button" class="btn btn-primary">Save changes</button> -->
+            &lt;!&ndash; <button type="button" class="btn btn-primary">Save changes</button> &ndash;&gt;
           </div>
         </div>
       </div>
-    </div>
-    <script th:inline="javascript">
+    </div>-->
+   <!-- <script th:inline="javascript">
       // 별점 처리
       function drawStar(target) {
         document.querySelector('.star span').style.width = `${target.value * 10}%`;
@@ -105,7 +101,7 @@
 
       // window.onload : document의 태그를 모두 읽고 난뒤 실행되는 함수
       window.onload = function(){
-        var mno = [[${movieDTO.mno}]]
+        var fno = [[${movieDTO.fno}]]
         loadReviewJSON();
         const uploadResultUlLis = document.querySelectorAll(".uploadResult ul li");
         for(let i=0;i<uploadResultUlLis.length;i++){
@@ -126,8 +122,8 @@
         // Ajax로 리뷰 불러오기
         function loadReviewJSON() {
           const url = /*[[@{/reviews/}]]*/'url'
-          const listGroup = document.querySelector(".reviewList")
-          fetch(url+mno+"/all", {method: 'GET',})
+          const listGroup = document.querySelector(".reviewsList")
+          fetch(url+fno+"/all", {method: 'GET',})
           .then(response => response.json())
           .then(data => {
             // console.log(data)
@@ -138,10 +134,10 @@
               onmouseout="this.style.background='white'"
               data-mid="${data[i].mid}" data-text="${data[i].text}"
               data-grade="${data[i].grade}" data-nickname="${data[i].nickname}"
-              data-email="${data[i].email}" data-reviewnum="${data[i].reviewnum}"
+              data-email="${data[i].email}" data-reviewsnum="${data[i].reviewsnum}"
               style="padding: 5px 20px;cursor:pointer;">
                 <div style="display:inline-block;width:68%;">
-                  <h6 style="display:inline-block;width:70px">${data[i].reviewnum}</h6>
+                  <h6 style="display:inline-block;width:70px">${data[i].reviewsnum}</h6>
                   <h5 class="card-text" style="display:inline-block;">${data[i].text}
                   [★ ${data[i].grade}]</h5>
                 </div>
@@ -159,14 +155,14 @@
             for(let i=0;i<cardBody.length;i++) {
               // 리뷰 상세보기
               cardBody[i].onclick = function() {
-                let reviewnum = cardBody[i].dataset.reviewnum;
+                let reviewsnum = cardBody[i].dataset.reviewsnum;
                 let text = cardBody[i].dataset.text;
                 let mid = cardBody[i].dataset.mid;
                 let grade = cardBody[i].dataset.grade;
                 let nickname = cardBody[i].dataset.nickname;
-                document.querySelector('#exampleModalLabel').textContent='No '+reviewnum
+                document.querySelector('#exampleModalLabel').textContent='No '+reviewsnum
                 document.querySelector(".modal-body").innerHTML =
-                  `<input type="hidden" name="reviewnum" value="${reviewnum}" readonly>
+                  `<input type="hidden" name="reviewsnum" value="${reviewsnum}" readonly>
                    <input type="hidden" name="mid" value="${mid}" readonly>
                    <label id="notice">Grade</label><span class="star">★★★★★<span>★★★★★</span>
                    <input type="range" oninput="drawStar(this)" value="1" step="2" min="0" max="10">
@@ -179,7 +175,7 @@
                    <span class="btn btn-secondary" data-bs-dismiss="modal">Close</span>
                   `
                 document.querySelector(".modal-footer .modify").onclick = function () {
-                  let reviewnum = document.querySelector(".modal-body input[name='reviewnum']")
+                  let reviewsnum = document.querySelector(".modal-body input[name='reviewsnum']")
                   let text = document.querySelector(".modal-body input[name='text']")
                   let mid = document.querySelector(".modal-body input[name='mid']")
                   let grade = parseFloat(document.querySelector(".star span").style.width)*0.01*5;
@@ -188,13 +184,13 @@
                   if(!text.value) {
                     text.setAttribute('placeholder','댓글입력하세요');text.focus();return;}
                   if(!grade) {notice.textContent='Select Grade!'; return;}
-                  let review = {mno: mno, text: text.value, mid: mid.value
-                                  , grade: grade, reviewnum: reviewnum.value}
+                  let reviews = {fno: fno, text: text.value, mid: mid.value
+                                  , grade: grade, reviewsnum: reviewsnum.value}
                   const url = /*[[@{/reviews/}]]*/'url';
-                  fetch(url+mno+"/"+reviewnum.value, {
+                  fetch(url+fno+"/"+reviewsnum.value, {
                     method: 'PUT',
                     headers: {'Content-type': 'application/json'},
-                    body: JSON.stringify(review)
+                    body: JSON.stringify(reviews)
                   })
                   .then(res => res.json())
                   .then(function(data){
@@ -207,10 +203,10 @@
                   .catch(err => console.log('myError', err))
                 }
                 document.querySelector(".modal-footer .remove").onclick = function () {
-                  let reviewnum = document.querySelector(
-                    ".modal-body input[name='reviewnum']")
+                  let reviewsnum = document.querySelector(
+                    ".modal-body input[name='reviewsnum']")
                   const url = /*[[@{/reviews/}]]*/'url';
-                  fetch(url + mno + "/" + reviewnum.value, {
+                  fetch(url + fno + "/" + reviewsnum.value, {
                     method: 'DELETE',
                     headers: {'Content-type': 'application/json'},
                   })
@@ -273,12 +269,12 @@
             if(!mid.value) {
               mid.setAttribute('placeholder','회원번호를 입력하세요');mid.focus();return;}
             if(!grade) {notice.textContent='Select Grade!'; return;}
-            let review = {mno: mno, text: text.value, mid: mid.value, grade: grade}
+            let reviews = {fno: fno, text: text.value, mid: mid.value, grade: grade}
             const url = /*[[@{/reviews/}]]*/'url';
-            fetch(url+mno, {
+            fetch(url+fno, {
               method: 'POST',
               headers: {'Content-type': 'application/json'},
-              body: JSON.stringify(review)
+              body: JSON.stringify(reviews)
             })
             .then(res => res.json())
             .then(function(data){
@@ -306,8 +302,7 @@
           myModal.show()
         }
       }
-
-    </script>
+    </script>-->
   </th:block>
 
 </th:block>
