--- a/InstaPrj/src/main/resources/templates/feeds/register.html
+++ b/InstaPrj/src/main/resources/templates/feeds/register.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="ko" xmlns:th="http://www.thymeleaf.org">
-<th:block th:replace="~{/layout/basic :: setContent(~{this::content})}">
+<th:block th:replace="~{/feeds/list :: setContent(~{this::content})}">
   <th:block th:fragment="content">
     <h1 class="mt-4">Movie Register Page</h1>
     <style>
@@ -13,7 +13,7 @@
       .uploadResult ul li {list-style:none;padding:10px;margin-left:2em;}
       .uploadResult ul li img {width: 100px;}
     </style>
-    <form th:action="@{/movie/register}" th:method="post" id="frmSend">
+    <form th:action="@{/feeds/register}" th:method="post" id="frmSend">
       <div class="form-group">
         <label for="title">Title</label>
         <input type="text" name="title" id="title" class="form-control"
