--- a/InstaPrj/src/main/resources/templates/layout/basic.html
+++ b/InstaPrj/src/main/resources/templates/layout/basic.html
@@ -1,20 +1,23 @@
+<!--
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko"  xmlns:th="http://www.thymeleaf.org">
+<th:block th:fragment="setContent(content)">
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="description" content="" />
     <meta name="author" content="" />
     <title>Shop Homepage - Start Bootstrap Template</title>
-    <!-- Favicon-->
-    <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
-    <!-- Bootstrap icons-->
+    &lt;!&ndash; Favicon&ndash;&gt;
+    <link rel="icon" type="image/x-icon" href="@{/assets/favicon.ico}" />
+    &lt;!&ndash; Bootstrap icons&ndash;&gt;
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
-    <!-- Core theme CSS (includes Bootstrap)-->
-    <link href="css/styles.css" rel="stylesheet" />
+    &lt;!&ndash; Core theme CSS (includes Bootstrap)&ndash;&gt;
+    <link th:href="@{/css/styles.css}" rel="stylesheet" />
 </head>
 <body>
-<!-- Navigation-->
+
+&lt;!&ndash; Navigation&ndash;&gt;
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container px-4 px-lg-5">
         <a class="navbar-brand" href="#!">Start Bootstrap</a>
@@ -43,33 +46,36 @@
         </div>
     </div>
 </nav>
-<!-- Header-->
+&lt;!&ndash; Header&ndash;&gt;
 <header class="bg-dark py-5">
     <div class="container px-4 px-lg-5 my-5">
         <div class="text-center text-white">
-            <h1 class="display-4 fw-bolder">Shop in style</h1>
-            <p class="lead fw-normal text-white-50 mb-0">With this shop hompeage template</p>
+            <h1 class="display-4 fw-bolder">InstaGram Project</h1>
+            <p class="lead fw-normal text-white-50 mb-0">create by. Enney 2024-08-16</p>
         </div>
     </div>
 </header>
-<!-- Section-->
+&lt;!&ndash; Section&ndash;&gt;
 <section class="py-5">
+    <div class="container-fluid">
+        <th:block th:replace="${content}"></th:block>
+    </div>
     <div class="container px-4 px-lg-5 mt-5">
         <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
             <div class="col mb-5">
                 <div class="card h-100">
-                    <!-- Product image-->
+                    &lt;!&ndash; Product image&ndash;&gt;
                     <img class="card-img-top" src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg" alt="..." />
-                    <!-- Product details-->
+                    &lt;!&ndash; Product details&ndash;&gt;
                     <div class="card-body p-4">
                         <div class="text-center">
-                            <!-- Product name-->
+                            &lt;!&ndash; Product name&ndash;&gt;
                             <h5 class="fw-bolder">Fancy Product</h5>
-                            <!-- Product price-->
+                            &lt;!&ndash; Product price&ndash;&gt;
                             $40.00 - $80.00
                         </div>
                     </div>
-                    <!-- Product actions-->
+                    &lt;!&ndash; Product actions&ndash;&gt;
                     <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
                         <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">View options</a></div>
                     </div>
@@ -77,16 +83,16 @@
             </div>
             <div class="col mb-5">
                 <div class="card h-100">
-                    <!-- Sale badge-->
+                    &lt;!&ndash; Sale badge&ndash;&gt;
                     <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">Sale</div>
-                    <!-- Product image-->
+                    &lt;!&ndash; Product image&ndash;&gt;
                     <img class="card-img-top" src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg" alt="..." />
-                    <!-- Product details-->
+                    &lt;!&ndash; Product details&ndash;&gt;
                     <div class="card-body p-4">
                         <div class="text-center">
-                            <!-- Product name-->
+                            &lt;!&ndash; Product name&ndash;&gt;
                             <h5 class="fw-bolder">Special Item</h5>
-                            <!-- Product reviews-->
+                            &lt;!&ndash; Product reviews&ndash;&gt;
                             <div class="d-flex justify-content-center small text-warning mb-2">
                                 <div class="bi-star-fill"></div>
                                 <div class="bi-star-fill"></div>
@@ -94,12 +100,12 @@
                                 <div class="bi-star-fill"></div>
                                 <div class="bi-star-fill"></div>
                             </div>
-                            <!-- Product price-->
+                            &lt;!&ndash; Product price&ndash;&gt;
                             <span class="text-muted text-decoration-line-through">$20.00</span>
                             $18.00
                         </div>
                     </div>
-                    <!-- Product actions-->
+                    &lt;!&ndash; Product actions&ndash;&gt;
                     <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
                         <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Add to cart</a></div>
                     </div>
@@ -107,21 +113,21 @@
             </div>
             <div class="col mb-5">
                 <div class="card h-100">
-                    <!-- Sale badge-->
+                    &lt;!&ndash; Sale badge&ndash;&gt;
                     <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">Sale</div>
-                    <!-- Product image-->
+                    &lt;!&ndash; Product image&ndash;&gt;
                     <img class="card-img-top" src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg" alt="..." />
-                    <!-- Product details-->
+                    &lt;!&ndash; Product details&ndash;&gt;
                     <div class="card-body p-4">
                         <div class="text-center">
-                            <!-- Product name-->
+                            &lt;!&ndash; Product name&ndash;&gt;
                             <h5 class="fw-bolder">Sale Item</h5>
-                            <!-- Product price-->
+                            &lt;!&ndash; Product price&ndash;&gt;
                             <span class="text-muted text-decoration-line-through">$50.00</span>
                             $25.00
                         </div>
                     </div>
-                    <!-- Product actions-->
+                    &lt;!&ndash; Product actions&ndash;&gt;
                     <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
                         <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Add to cart</a></div>
                     </div>
@@ -129,14 +135,14 @@
             </div>
             <div class="col mb-5">
                 <div class="card h-100">
-                    <!-- Product image-->
+                    &lt;!&ndash; Product image&ndash;&gt;
                     <img class="card-img-top" src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg" alt="..." />
-                    <!-- Product details-->
+                    &lt;!&ndash; Product details&ndash;&gt;
                     <div class="card-body p-4">
                         <div class="text-center">
-                            <!-- Product name-->
+                            &lt;!&ndash; Product name&ndash;&gt;
                             <h5 class="fw-bolder">Popular Item</h5>
-                            <!-- Product reviews-->
+                            &lt;!&ndash; Product reviews&ndash;&gt;
                             <div class="d-flex justify-content-center small text-warning mb-2">
                                 <div class="bi-star-fill"></div>
                                 <div class="bi-star-fill"></div>
@@ -144,11 +150,11 @@
                                 <div class="bi-star-fill"></div>
                                 <div class="bi-star-fill"></div>
                             </div>
-                            <!-- Product price-->
+                            &lt;!&ndash; Product price&ndash;&gt;
                             $40.00
                         </div>
                     </div>
-                    <!-- Product actions-->
+                    &lt;!&ndash; Product actions&ndash;&gt;
                     <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
                         <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Add to cart</a></div>
                     </div>
@@ -156,21 +162,21 @@
             </div>
             <div class="col mb-5">
                 <div class="card h-100">
-                    <!-- Sale badge-->
+                    &lt;!&ndash; Sale badge&ndash;&gt;
                     <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">Sale</div>
-                    <!-- Product image-->
+                    &lt;!&ndash; Product image&ndash;&gt;
                     <img class="card-img-top" src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg" alt="..." />
-                    <!-- Product details-->
+                    &lt;!&ndash; Product details&ndash;&gt;
                     <div class="card-body p-4">
                         <div class="text-center">
-                            <!-- Product name-->
+                            &lt;!&ndash; Product name&ndash;&gt;
                             <h5 class="fw-bolder">Sale Item</h5>
-                            <!-- Product price-->
+                            &lt;!&ndash; Product price&ndash;&gt;
                             <span class="text-muted text-decoration-line-through">$50.00</span>
                             $25.00
                         </div>
                     </div>
-                    <!-- Product actions-->
+                    &lt;!&ndash; Product actions&ndash;&gt;
                     <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
                         <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Add to cart</a></div>
                     </div>
@@ -178,18 +184,18 @@
             </div>
             <div class="col mb-5">
                 <div class="card h-100">
-                    <!-- Product image-->
+                    &lt;!&ndash; Product image&ndash;&gt;
                     <img class="card-img-top" src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg" alt="..." />
-                    <!-- Product details-->
+                    &lt;!&ndash; Product details&ndash;&gt;
                     <div class="card-body p-4">
                         <div class="text-center">
-                            <!-- Product name-->
+                            &lt;!&ndash; Product name&ndash;&gt;
                             <h5 class="fw-bolder">Fancy Product</h5>
-                            <!-- Product price-->
+                            &lt;!&ndash; Product price&ndash;&gt;
                             $120.00 - $280.00
                         </div>
                     </div>
-                    <!-- Product actions-->
+                    &lt;!&ndash; Product actions&ndash;&gt;
                     <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
                         <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">View options</a></div>
                     </div>
@@ -197,16 +203,16 @@
             </div>
             <div class="col mb-5">
                 <div class="card h-100">
-                    <!-- Sale badge-->
+                    &lt;!&ndash; Sale badge&ndash;&gt;
                     <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">Sale</div>
-                    <!-- Product image-->
+                    &lt;!&ndash; Product image&ndash;&gt;
                     <img class="card-img-top" src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg" alt="..." />
-                    <!-- Product details-->
+                    &lt;!&ndash; Product details&ndash;&gt;
                     <div class="card-body p-4">
                         <div class="text-center">
-                            <!-- Product name-->
+                            &lt;!&ndash; Product name&ndash;&gt;
                             <h5 class="fw-bolder">Special Item</h5>
-                            <!-- Product reviews-->
+                            &lt;!&ndash; Product reviews&ndash;&gt;
                             <div class="d-flex justify-content-center small text-warning mb-2">
                                 <div class="bi-star-fill"></div>
                                 <div class="bi-star-fill"></div>
@@ -214,12 +220,12 @@
                                 <div class="bi-star-fill"></div>
                                 <div class="bi-star-fill"></div>
                             </div>
-                            <!-- Product price-->
+                            &lt;!&ndash; Product price&ndash;&gt;
                             <span class="text-muted text-decoration-line-through">$20.00</span>
                             $18.00
                         </div>
                     </div>
-                    <!-- Product actions-->
+                    &lt;!&ndash; Product actions&ndash;&gt;
                     <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
                         <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Add to cart</a></div>
                     </div>
@@ -227,14 +233,14 @@
             </div>
             <div class="col mb-5">
                 <div class="card h-100">
-                    <!-- Product image-->
+                    &lt;!&ndash; Product image&ndash;&gt;
                     <img class="card-img-top" src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg" alt="..." />
-                    <!-- Product details-->
+                    &lt;!&ndash; Product details&ndash;&gt;
                     <div class="card-body p-4">
                         <div class="text-center">
-                            <!-- Product name-->
+                            &lt;!&ndash; Product name&ndash;&gt;
                             <h5 class="fw-bolder">Popular Item</h5>
-                            <!-- Product reviews-->
+                            &lt;!&ndash; Product reviews&ndash;&gt;
                             <div class="d-flex justify-content-center small text-warning mb-2">
                                 <div class="bi-star-fill"></div>
                                 <div class="bi-star-fill"></div>
@@ -242,11 +248,11 @@
                                 <div class="bi-star-fill"></div>
                                 <div class="bi-star-fill"></div>
                             </div>
-                            <!-- Product price-->
+                            &lt;!&ndash; Product price&ndash;&gt;
                             $40.00
                         </div>
                     </div>
-                    <!-- Product actions-->
+                    &lt;!&ndash; Product actions&ndash;&gt;
                     <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
                         <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Add to cart</a></div>
                     </div>
@@ -255,13 +261,15 @@
         </div>
     </div>
 </section>
-<!-- Footer-->
+&lt;!&ndash; Footer&ndash;&gt;
 <footer class="py-5 bg-dark">
     <div class="container"><p class="m-0 text-center text-white">Copyright &copy; Your Website 2023</p></div>
 </footer>
-<!-- Bootstrap core JS-->
+&lt;!&ndash; Bootstrap core JS&ndash;&gt;
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-<!-- Core theme JS-->
-<script src="js/scripts.js"></script>
+&lt;!&ndash; Core theme JS&ndash;&gt;
+<script th:src="@{/js/scripts.js}"></script>
 </body>
+</th:block>
 </html>
+-->
