--- a/InstaPrj/src/main/resources/templates/feeds/list.html
+++ b/InstaPrj/src/main/resources/templates/feeds/list.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="ko"  xmlns:th="http://www.thymeleaf.org">
 <th:block th:fragment="setContent(content)">
+  <th:block th:fragment="content">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
@@ -119,57 +120,55 @@
   </section>
   <script th:inline="javascript">
     // document의 태그를 모두 읽고 난뒤 실행되는 함수
-    window.onload = function(){
-      var msg = [[${msg}]]
-      // 일회성 msg의 내용이 비거나 history 상태가 비지 않는 경우 return
-      //if(msg === '' || history.state) return
+          window.onload = function(){
+            frmSearch = document.querySelector("#frmSearch")
+            btnSearch = document.querySelector(".btnSearch")
+            type = document.querySelector("#type");
+            keyword = document.querySelector("#keyword")
 
-      if(msg) {  // truthy 데이터가 올 경우만 if문 실행
-        const myModal = new bootstrap.Modal(document.querySelector('#myModal'),
-                        { backdrop: true });
-        document.querySelector(".modal-body").innerHTML
-          = `<p>${msg}되었습니다.</p>`
-        myModal.show()
-      }
-      // history 이용해서 모달창 보여준거에 대한 기록을 clear!
-      history.replaceState({}, null, null) //(state, unused, url)
+            btnSearch.onclick = e => {
+              e.preventDefault();
+              if(!keyword.value) {
+                keyword.focus();
+                return;
+              }
+              frmSearch.submit();
+            }
+            type.onchange = () => {
+              if(type.options[0].selected) {
+                location.href = /*[[@{/feeds/list}]]*/'url'
+              } else {
+                keyword.disabled = false;
+                btnSearch.disabled = false;
+              }
+            }
+            const requestKeyword = /*[[${pageRequestDTO.keyword}]]*/'keyword'
+            keyword.disabled = requestKeyword?false:true;
+            btnSearch.disabled = requestKeyword?false:true;
 
-      frmSearch = document.querySelector("#frmSearch")
-      btnSearch = document.querySelector(".btnSearch")
-      type = document.querySelector("#type");
-      keyword = document.querySelector("#keyword")
+            var msg = [[${msg}]]
+            // 일회성 msg의 내용이 비거나 history 상태가 비지 않는 경우 return
+            if(msg === '' || history.state) return
 
-      btnSearch.onclick = e => {
-        e.preventDefault();
-        if(!keyword.value) {
-          keyword.focus();
-          return;
-        }
-        frmSearch.submit();
-      }
-      type.onchange = () => {
-        if(type.options[0].selected) {
-          location.href = /*[[@{/feeds/list}]]*/'url'
-        } else {
-          keyword.disabled = false;
-          btnSearch.disabled = false;
-        }
-      }
-      const requestKeyword = /*[[${pageRequestDTO.keyword}]]*/'keyword'
-      keyword.disabled = requestKeyword?false:true;
-      btnSearch.disabled = requestKeyword?false:true;
-    }
-  function goRead(fno, page, type, keyword) {
-     console.log(">>>fno:", fno);
-    console.log(">>>page:", page);
-    console.log(">>>type:", type);
-    console.log(">>>keyword:", keyword);
-
-    const baseUrl = '/feeds/read';
-    const url = `${baseUrl}?fno=${fno}&page=${page}&type=${encodeURIComponent(type)}&keyword=${encodeURIComponent(keyword)}`;
-
-    location.href = url;
-}
+            if(msg) {  // truthy 데이터가 올 경우만 if문 실행
+              const myModal = new bootstrap.Modal(document.querySelector('#myModal'),
+                              { backdrop: true });
+              document.querySelector(".modal-body").innerHTML
+                = `<p>${msg}되었습니다.</p>`
+              myModal.show()
+            }
+            // history 이용해서 모달창 보여준거에 대한 기록을 clear!
+            history.replaceState({}, null, null) //(state, unused, url)
+          }
+          function goRead(fno, page, type, keyword){
+            // 디버깅: 매개변수 값 출력
+            console.log('fno:', fno);
+            console.log('page:', page);
+            console.log('type:', type);
+            console.log('keyword:', keyword);
+            url = /*[[@{/feeds/read}]]*/'url'
+            location.href = url + `?fno=${fno}&page=${page}&type=${type}&keyword=${keyword}`
+          }
   </script>
   <!-- Footer-->
   <footer class="py-5 bg-dark">
