--- a/InstaPrj/src/main/resources/templates/feeds/register.html
+++ b/InstaPrj/src/main/resources/templates/feeds/register.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="ko" xmlns:th="http://www.thymeleaf.org">
-<th:block th:replace="~{/feeds/list :: setContent(~{this::content})}">
-  <th:block th:fragment="content">
-    <h1 class="mt-4">Movie Register Page</h1>
+<!--<th:block th:replace="~{/feeds/list :: setContent(~{this::content})}">-->
+<!--  <th:block th:fragment="content">-->
+    <h1 class="mt-4">Feed Register Page</h1>
     <style>
       .form-group {margin-bottom: 30px;}
       .uploadResult {width: 100%;background:gray;margin-top:10px;}
@@ -139,8 +139,7 @@
       }
 
     </script>
-  </th:block>
-
-</th:block>
+<!--  </th:block>-->
+<!--</th:block>-->
 
 </html>
