--- a/InstaPrj/src/main/resources/templates/layout/basic.html
+++ b/InstaPrj/src/main/resources/templates/layout/basic.html
@@ -1,4 +1,3 @@
-<!--
 <!DOCTYPE html>
 <html lang="ko"  xmlns:th="http://www.thymeleaf.org">
 <th:block th:fragment="setContent(content)">
@@ -8,16 +7,15 @@
     <meta name="description" content="" />
     <meta name="author" content="" />
     <title>Shop Homepage - Start Bootstrap Template</title>
-    &lt;!&ndash; Favicon&ndash;&gt;
+    <!-- Favicon-->
     <link rel="icon" type="image/x-icon" href="@{/assets/favicon.ico}" />
-    &lt;!&ndash; Bootstrap icons&ndash;&gt;
+    <!-- Bootstrap icons-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
-    &lt;!&ndash; Core theme CSS (includes Bootstrap)&ndash;&gt;
+    <!-- Core theme CSS (includes Bootstrap)-->
     <link th:href="@{/css/styles.css}" rel="stylesheet" />
 </head>
 <body>
-
-&lt;!&ndash; Navigation&ndash;&gt;
+<!-- Navigation-->
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container px-4 px-lg-5">
         <a class="navbar-brand" href="#!">Start Bootstrap</a>
@@ -46,7 +44,7 @@
         </div>
     </div>
 </nav>
-&lt;!&ndash; Header&ndash;&gt;
+<!-- Header-->
 <header class="bg-dark py-5">
     <div class="container px-4 px-lg-5 my-5">
         <div class="text-center text-white">
@@ -55,7 +53,7 @@
         </div>
     </div>
 </header>
-&lt;!&ndash; Section&ndash;&gt;
+<!-- Section-->
 <section class="py-5">
     <div class="container-fluid">
         <th:block th:replace="${content}"></th:block>
@@ -64,18 +62,18 @@
         <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
             <div class="col mb-5">
                 <div class="card h-100">
-                    &lt;!&ndash; Product image&ndash;&gt;
+                    <!-- Product image-->
                     <img class="card-img-top" src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg" alt="..." />
-                    &lt;!&ndash; Product details&ndash;&gt;
+                    <!-- Product details-->
                     <div class="card-body p-4">
                         <div class="text-center">
-                            &lt;!&ndash; Product name&ndash;&gt;
+                            <!-- Product name-->
                             <h5 class="fw-bolder">Fancy Product</h5>
-                            &lt;!&ndash; Product price&ndash;&gt;
+                            <!-- Product price-->
                             $40.00 - $80.00
                         </div>
                     </div>
-                    &lt;!&ndash; Product actions&ndash;&gt;
+                    <!-- Product actions-->
                     <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
                         <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">View options</a></div>
                     </div>
@@ -83,16 +81,16 @@
             </div>
             <div class="col mb-5">
                 <div class="card h-100">
-                    &lt;!&ndash; Sale badge&ndash;&gt;
+                    <!-- Sale badge-->
                     <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">Sale</div>
-                    &lt;!&ndash; Product image&ndash;&gt;
+                    <!-- Product image-->
                     <img class="card-img-top" src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg" alt="..." />
-                    &lt;!&ndash; Product details&ndash;&gt;
+                    <!-- Product details-->
                     <div class="card-body p-4">
                         <div class="text-center">
-                            &lt;!&ndash; Product name&ndash;&gt;
+                            <!-- Product name-->
                             <h5 class="fw-bolder">Special Item</h5>
-                            &lt;!&ndash; Product reviews&ndash;&gt;
+                            <!-- Product reviews-->
                             <div class="d-flex justify-content-center small text-warning mb-2">
                                 <div class="bi-star-fill"></div>
                                 <div class="bi-star-fill"></div>
@@ -100,12 +98,12 @@
                                 <div class="bi-star-fill"></div>
                                 <div class="bi-star-fill"></div>
                             </div>
-                            &lt;!&ndash; Product price&ndash;&gt;
+                            <!-- Product price-->
                             <span class="text-muted text-decoration-line-through">$20.00</span>
                             $18.00
                         </div>
                     </div>
-                    &lt;!&ndash; Product actions&ndash;&gt;
+                    <!-- Product actions-->
                     <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
                         <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Add to cart</a></div>
                     </div>
@@ -113,21 +111,21 @@
             </div>
             <div class="col mb-5">
                 <div class="card h-100">
-                    &lt;!&ndash; Sale badge&ndash;&gt;
+                    <!-- Sale badge-->
                     <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">Sale</div>
-                    &lt;!&ndash; Product image&ndash;&gt;
+                    <!-- Product image-->
                     <img class="card-img-top" src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg" alt="..." />
-                    &lt;!&ndash; Product details&ndash;&gt;
+                    <!-- Product details-->
                     <div class="card-body p-4">
                         <div class="text-center">
-                            &lt;!&ndash; Product name&ndash;&gt;
+                            <!-- Product name-->
                             <h5 class="fw-bolder">Sale Item</h5>
-                            &lt;!&ndash; Product price&ndash;&gt;
+                            <!-- Product price-->
                             <span class="text-muted text-decoration-line-through">$50.00</span>
                             $25.00
                         </div>
                     </div>
-                    &lt;!&ndash; Product actions&ndash;&gt;
+                    <!-- Product actions-->
                     <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
                         <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Add to cart</a></div>
                     </div>
@@ -135,14 +133,14 @@
             </div>
             <div class="col mb-5">
                 <div class="card h-100">
-                    &lt;!&ndash; Product image&ndash;&gt;
+                    <!-- Product image-->
                     <img class="card-img-top" src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg" alt="..." />
-                    &lt;!&ndash; Product details&ndash;&gt;
+                    <!-- Product details-->
                     <div class="card-body p-4">
                         <div class="text-center">
-                            &lt;!&ndash; Product name&ndash;&gt;
+                            <!-- Product name-->
                             <h5 class="fw-bolder">Popular Item</h5>
-                            &lt;!&ndash; Product reviews&ndash;&gt;
+                            <!-- Product reviews-->
                             <div class="d-flex justify-content-center small text-warning mb-2">
                                 <div class="bi-star-fill"></div>
                                 <div class="bi-star-fill"></div>
@@ -150,11 +148,11 @@
                                 <div class="bi-star-fill"></div>
                                 <div class="bi-star-fill"></div>
                             </div>
-                            &lt;!&ndash; Product price&ndash;&gt;
+                            <!-- Product price-->
                             $40.00
                         </div>
                     </div>
-                    &lt;!&ndash; Product actions&ndash;&gt;
+                    <!-- Product actions-->
                     <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
                         <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Add to cart</a></div>
                     </div>
@@ -162,114 +160,52 @@
             </div>
             <div class="col mb-5">
                 <div class="card h-100">
-                    &lt;!&ndash; Sale badge&ndash;&gt;
+                    <!-- Sale badge-->
                     <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">Sale</div>
-                    &lt;!&ndash; Product image&ndash;&gt;
-                    <img class="card-img-top" src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg" alt="..." />
-                    &lt;!&ndash; Product details&ndash;&gt;
-                    <div class="card-body p-4">
-                        <div class="text-center">
-                            &lt;!&ndash; Product name&ndash;&gt;
-                            <h5 class="fw-bolder">Sale Item</h5>
-                            &lt;!&ndash; Product price&ndash;&gt;
-                            <span class="text-muted text-decoration-line-through">$50.00</span>
-                            $25.00
+                    <!-- ProdctNavigation-->
+                  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                    <div class="container px-4 px-lg-5">
+                      <a class="navbar-brand" href="#!">Start Bootstrap
+                      </a>
+                      <a class="btn btn-outline-primary px-lg-5" th:href="@{/feeds/register}">Register</a>
+                      <!--    검색창      -->
+                      <form th:action="@{/feeds/list}" id="frmSearch" method="get">
+                        <div class="input-group">
+                          <div class="input-group-prepend" style="margin-right:10px;">
+                            <select class="form-control" id="type" name="type">
+                              <option th:selected="${pageRequestDTO.type == null}">선택하세요</option>
+                              <option value="t" th:selected="${pageRequestDTO.type == 't'}">제목</option>
+                              <option value="c" th:selected="${pageRequestDTO.type == 'c'}">내용</option>
+                              <option value="tc" th:selected="${pageRequestDTO.type == 'tc'}">제목+내용</option>
+                            </select>
+                          </div>
+                          <input type="text" class="form-control" name="keyword" style="border-radius:5px"
+                                 id="keyword" th:value="${pageRequestDTO.keyword}">
+                          <div class="input-group-append" style="margin-left:10px;">
+                            <button class="btn btn-outline-primary btnSearch">Search</button>
+                          </div>
                         </div>
+                      </form>
                     </div>
-                    &lt;!&ndash; Product actions&ndash;&gt;
-                    <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                        <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Add to cart</a></div>
+                  </nav>
+                  <!-- Header-->
+                  <header class="bg-dark py-5">
+                    <div class="container px-4 px-lg-5 my-5">
+                      <div class="text-center text-white">
+                        <h1 class="display-4 fw-bolder">InstaGram Project</h1>
+                        <p class="lead fw-normal text-white-50 mb-0">create by. Enney 2024-08-16</p>
+                      </div>
                     </div>
-                </div>
-            </div>
-            <div class="col mb-5">
-                <div class="card h-100">
-                    &lt;!&ndash; Product image&ndash;&gt;
-                    <img class="card-img-top" src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg" alt="..." />
-                    &lt;!&ndash; Product details&ndash;&gt;
-                    <div class="card-body p-4">
-                        <div class="text-center">
-                            &lt;!&ndash; Product name&ndash;&gt;
-                            <h5 class="fw-bolder">Fancy Product</h5>
-                            &lt;!&ndash; Product price&ndash;&gt;
-                            $120.00 - $280.00
-                        </div>
-                    </div>
-                    &lt;!&ndash; Product actions&ndash;&gt;
-                    <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                        <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">View options</a></div>
-                    </div>
-                </div>
-            </div>
-            <div class="col mb-5">
-                <div class="card h-100">
-                    &lt;!&ndash; Sale badge&ndash;&gt;
-                    <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">Sale</div>
-                    &lt;!&ndash; Product image&ndash;&gt;
-                    <img class="card-img-top" src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg" alt="..." />
-                    &lt;!&ndash; Product details&ndash;&gt;
-                    <div class="card-body p-4">
-                        <div class="text-center">
-                            &lt;!&ndash; Product name&ndash;&gt;
-                            <h5 class="fw-bolder">Special Item</h5>
-                            &lt;!&ndash; Product reviews&ndash;&gt;
-                            <div class="d-flex justify-content-center small text-warning mb-2">
-                                <div class="bi-star-fill"></div>
-                                <div class="bi-star-fill"></div>
-                                <div class="bi-star-fill"></div>
-                                <div class="bi-star-fill"></div>
-                                <div class="bi-star-fill"></div>
-                            </div>
-                            &lt;!&ndash; Product price&ndash;&gt;
-                            <span class="text-muted text-decoration-line-through">$20.00</span>
-                            $18.00
-                        </div>
-                    </div>
-                    &lt;!&ndash; Product actions&ndash;&gt;
-                    <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                        <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Add to cart</a></div>
-                    </div>
-                </div>
-            </div>
-            <div class="col mb-5">
-                <div class="card h-100">
-                    &lt;!&ndash; Product image&ndash;&gt;
-                    <img class="card-img-top" src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg" alt="..." />
-                    &lt;!&ndash; Product details&ndash;&gt;
-                    <div class="card-body p-4">
-                        <div class="text-center">
-                            &lt;!&ndash; Product name&ndash;&gt;
-                            <h5 class="fw-bolder">Popular Item</h5>
-                            &lt;!&ndash; Product reviews&ndash;&gt;
-                            <div class="d-flex justify-content-center small text-warning mb-2">
-                                <div class="bi-star-fill"></div>
-                                <div class="bi-star-fill"></div>
-                                <div class="bi-star-fill"></div>
-                                <div class="bi-star-fill"></div>
-                                <div class="bi-star-fill"></div>
-                            </div>
-                            &lt;!&ndash; Product price&ndash;&gt;
-                            $40.00
-                        </div>
-                    </div>
-                    &lt;!&ndash; Product actions&ndash;&gt;
-                    <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                        <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Add to cart</a></div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
-&lt;!&ndash; Footer&ndash;&gt;
-<footer class="py-5 bg-dark">
-    <div class="container"><p class="m-0 text-center text-white">Copyright &copy; Your Website 2023</p></div>
-</footer>
-&lt;!&ndash; Bootstrap core JS&ndash;&gt;
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-&lt;!&ndash; Core theme JS&ndash;&gt;
-<script th:src="@{/js/scripts.js}"></script>
+                  </header>
+
+                  <!-- Footer-->
+                  <footer class="py-5 bg-dark">
+                    <div class="container"><p class="m-0 text-center text-white">Copyright &copy; Your Website 2023</p></div>
+                  </footer>
+                  <!-- Bootstrap core JS-->
+                  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+                  <!-- Core theme JS-->
+                  <script th:src="@{/js/scripts.js}"></script>
 </body>
 </th:block>
 </html>
--->
