--- a/InstaPrj/src/main/resources/templates/feeds/list.html
+++ b/InstaPrj/src/main/resources/templates/feeds/list.html
@@ -1,57 +1,10 @@
 <!DOCTYPE html>
 <html lang="ko"  xmlns:th="http://www.thymeleaf.org">
-<th:block th:fragment="setContent(content)">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <meta name="description" content="" />
-    <meta name="author" content="" />
-    <title>Shop Homepage - Start Bootstrap Template</title>
-    <!-- Favicon-->
-    <link rel="icon" type="image/x-icon" href="@{/assets/favicon.ico}" />
-    <!-- Bootstrap icons-->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
-    <!-- Core theme CSS (includes Bootstrap)-->
-    <link th:href="@{/css/styles.css}" rel="stylesheet" />
-  </head>
+<th:block th:replace="~{/layout/basic :: setContent(~{this::content})}">
+  <th:block th:fragment="content">
   <body>
-  <!-- Navigation-->
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="container px-4 px-lg-5">
-      <a class="navbar-brand" href="#!">Start Bootstrap
-      </a>
-      <a class="btn btn-outline-primary px-lg-5" th:href="@{/feeds/register}">Register</a>
-      <!--    검색창      -->
-      <form th:action="@{/feeds/list}" id="frmSearch" method="get">
-        <div class="input-group">
-          <div class="input-group-prepend" style="margin-right:10px;">
-            <select class="form-control" id="type" name="type">
-              <option th:selected="${pageRequestDTO.type == null}">선택하세요</option>
-              <option value="t" th:selected="${pageRequestDTO.type == 't'}">제목</option>
-              <option value="c" th:selected="${pageRequestDTO.type == 'c'}">내용</option>
-              <option value="tc" th:selected="${pageRequestDTO.type == 'tc'}">제목+내용</option>
-            </select>
-          </div>
-          <input type="text" class="form-control" name="keyword" style="border-radius:5px"
-                 id="keyword" th:value="${pageRequestDTO.keyword}">
-          <div class="input-group-append" style="margin-left:10px;">
-            <button class="btn btn-outline-primary btnSearch">Search</button>
-          </div>
-        </div>
-      </form>
-    </div>
-  </nav>
-  <!-- Header-->
-  <header class="bg-dark py-5">
-    <div class="container px-4 px-lg-5 my-5">
-      <div class="text-center text-white">
-        <h1 class="display-4 fw-bolder">InstaGram Project</h1>
-        <p class="lead fw-normal text-white-50 mb-0">create by. Enney 2024-08-16</p>
-      </div>
-    </div>
-  </header>
   <!-- Section-->
-  <section class="py-5">
+  <section>
     <div class="container px-4 px-lg-5 mt-5">
       <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
         <!--1 번-->
