--- a/InstaPrj/src/main/resources/templates/feeds/read.html
+++ b/InstaPrj/src/main/resources/templates/feeds/read.html
@@ -16,6 +16,8 @@
   .star span {width: 0;position: absolute; left: 0;color: red;
     overflow: hidden;pointer-events: none;}
 </style>
+<th:block th:replace="~{/layout/basic :: setContent(~{this::content})}">
+  <th:block th:fragment="content">
     <h1 class="mt-4">Content View</h1>
     <form th:action="@{/feeds/modify}" th:method="post" id="frmSend">
       <div class="form-group">
@@ -300,4 +302,6 @@
         }
       }
     </script>
+  </th:block>
+</th:block>
 </html>
