--- a/InstaPrj/src/main/resources/templates/feeds/modify.html
+++ b/InstaPrj/src/main/resources/templates/feeds/modify.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ko" xmlns:th="http://www.thymeleaf.org">
-<!--<th:block th:replace="~{/feeds/list :: setContent(~{this::content})}">
-  <th:block th:fragment="content">-->
+<th:block th:replace="~{/layout/basic :: setContent(~{this::content})}">
+  <th:block th:fragment="content">
     <h1 class="mt-4">Movie Modify Page</h1>
     <style>
       .form-group {margin-bottom: 30px;}
@@ -194,9 +194,6 @@
         window.history.back();
       }
     </script>
-<!--
   </th:block>
 </th:block>
--->
-
 </html>
