--- a/InstaPrj/src/main/resources/templates/feeds/register.html
+++ b/InstaPrj/src/main/resources/templates/feeds/register.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="ko" xmlns:th="http://www.thymeleaf.org">
-<th:block th:replace="~{/feeds/list :: setContent(~{this::content})}">
+<th:block th:replace="~{/layout/basic :: setContent(~{this::content})}">
   <th:block th:fragment="content">
     <h1 class="mt-4">Feed Register Page</h1>
     <style>
