--- a/InstaPrj/src/main/resources/templates/feeds/list.html
+++ b/InstaPrj/src/main/resources/templates/feeds/list.html
@@ -1,7 +1,38 @@
 <!DOCTYPE html>
 <html lang="ko"  xmlns:th="http://www.thymeleaf.org">
 <th:block th:replace="~{/layout/basic :: setContent(~{this::content})}">
-  <th:block th:fragment="content">
+  <th:block th:fragment="content" >
+    <!-- Header-->
+    <header class="bg-dark py-5">
+      <div class="container px-4 px-lg-5 my-5">
+        <div class="text-center text-white">
+          <h1 class="display-4 fw-bolder">InstaGram Feed List</h1>
+          <div class="d-grid gap-2 col-6 mx-auto">
+            <a class="btn btn-outline-primary m-4 " th:href="@{/feeds/register}">Register</a>
+          </div>
+          <div class="d-grid gap-2 col-8 mx-auto">
+            <form th:action="@{/feeds/list}" id="frmSearch" method="get">
+              <div class="input-group m-4 ">
+                <div class="input-group-prepend" style="margin-right:10px;">
+                  <select class="form-control" id="type" name="type">
+                    <option th:selected="${pageRequestDTO.type == null}">선택하세요</option>
+                    <option value="t" th:selected="${pageRequestDTO.type == 't'}">제목</option>
+                    <option value="c" th:selected="${pageRequestDTO.type == 'c'}">내용</option>
+                    <option value="tc" th:selected="${pageRequestDTO.type == 'tc'}">제목+내용</option>
+                  </select>
+                </div>
+                <input type="text" class="form-control" name="keyword" style="border-radius:5px"
+                       id="keyword" th:value="${pageRequestDTO.keyword}">
+                <div class="input-group-append" style="margin-left:10px;">
+                  <button class="btn btn-outline-primary btnSearch">Search</button>
+                </div>
+              </div>
+            </form>
+          </div>
+          <p class="lead fw-normal text-white-50 mb-0">create by. Enney 2024-08-16</p>
+        </div>
+      </div>
+    </header>
   <body>
   <!-- Section-->
   <section>
@@ -19,7 +50,7 @@
                  class="card-img-top"
                  alt="Feed Image" />
 
-            <!-- 기본 이미지: 피드 이미지가 없거나 유효하지 않을 때 표시 -->
+<!--            &lt;!&ndash; 기본 이미지: 피드 이미지가 없거나 유효하지 않을 때 표시 &ndash;&gt;-->
             <img th:unless="${feedsDTO.photosDTOList.size() > 0 && feedsDTO.photosDTOList[0].path != null}"
                  src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg"
                  class="card-img-top"
