--- a/InstaPrj/src/main/resources/templates/layout/basic.html
+++ b/InstaPrj/src/main/resources/templates/layout/basic.html
@@ -15,36 +15,9 @@
     <link th:href="@{/css/styles.css}" rel="stylesheet" />
 </head>
 <body>
-<!-- Header-->
-<header class="bg-dark py-5">
-    <div class="container px-4 px-lg-5 my-5">
-        <div class="text-center text-white">
-          <h1 class="display-4 fw-bolder">InstaGram Feed List</h1>
-          <a class="btn btn-outline-primary m-4 " th:href="@{/feeds/register}">Register</a>
-          <form th:action="@{/movie/list}" id="frmSearch" method="get">
-            <div class="input-group m-4 ">
-              <div class="input-group-prepend" style="margin-right:10px;">
-                <select class="form-control" id="type" name="type">
-                  <option th:selected="${pageRequestDTO.type == null}">선택하세요</option>
-                  <option value="t" th:selected="${pageRequestDTO.type == 't'}">제목</option>
-                  <option value="c" th:selected="${pageRequestDTO.type == 'c'}">내용</option>
-                  <option value="tc" th:selected="${pageRequestDTO.type == 'tc'}">제목+내용</option>
-                </select>
-              </div>
-              <input type="text" class="form-control" name="keyword" style="border-radius:5px"
-                     id="keyword" th:value="${pageRequestDTO.keyword}">
-              <div class="input-group-append" style="margin-left:10px;">
-                <button class="btn btn-outline-primary btnSearch">Search</button>
-              </div>
-            </div>
-          </form>
-            <p class="lead fw-normal text-white-50 mb-0">create by. Enney 2024-08-16</p>
-        </div>
-    </div>
-</header>
 <!-- Section-->
-<section class="py-5">
-    <div class="container-fluid">
+<section >
+    <div class="container-fluid p-0">
         <th:block th:replace="${content}"></th:block>
     </div>
   </section>
